# rag-extract

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tifin_rag_sys.ipynb
rag/: chain.py  evaluation.py  loader.py  vectorstore.py
utils/: config.py
